SERVER-92427 Fix QueryPlannerIXSelect::rateIndices for nodes that can… (#26908)

GitOrigin-RevId: 643a240a47257d7e482487320584c12d66800604